--- a/main/resources/templates/readings/new.html
+++ b/main/resources/templates/readings/new.html
@@ -95,10 +95,18 @@ $(document).ready(function() {
     var lastReadingDateStr = null;
     var dateHasError = false;
 
-    // Set today's date as default and bound selection to today as max
-    var todayStr = new Date().toISOString().split('T')[0];
-    $readingDate.attr('max', todayStr).val(todayStr);
-    validateDate();
+    // Postavljanje današnjeg datuma kao zadatog
+    function setToday() {
+        var today = new Date();
+        var yyyy = today.getFullYear();
+        var mm = String(today.getMonth() + 1).padStart(2, '0');
+        var dd = String(today.getDate()).padStart(2, '0');
+        var todayStr = `${yyyy}-${mm}-${dd}`;
+        $readingDate.val(todayStr);  // Postavljanje današnjeg datuma kao zadatog
+        $readingDate.attr('max', todayStr);  // Bound the date to today's max date
+    }
+    setToday();
+    validateDate();  // Pokretanje validacije odmah
 
     // When user is selected, load previous reading
     $userSelect.on('change', function() {
