--- a/main/resources/templates/payments/index.html
+++ b/main/resources/templates/payments/index.html
@@ -3,14 +3,14 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/main}">
 <head>
-    <title>Plaćanja</title>
+    <title>Uplate</title>
 </head>
 <body>
 <div layout:fragment="content">
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <a href="/payments/new" class="btn btn-primary btn-sm">
-            <i class="bi bi-plus-circle"></i> Novo plaćanje
+            <i class="bi bi-plus-circle"></i> Nova uplata
         </a>
     </div>
 
